css/glowingbear.css
html,
body {
    height: 100%;
/* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    /* Negative indent footer by it's height */
    margin: 0 auto -25px;
}

/* Set the fixed height of the footer here */
#push,
#footer {
    height: 25px;
}

input#sendMessage {
    border: 0;
    width: 100%;
}

/* Lastly, apply responsive CSS fixes as necessary */
@media (max-width: 767px) {
    #footer {
        margin-left: -20px;
        margin-right: -20px;
        padding-left: 20px;
        padding-right: 20px;
    }
}

body {
    color: #ddd;
    background-color: #222;
    padding-left: 0;
    padding-right: 5px;
    padding-bottom:70px;
}

input#sendMessage {
    border: 0;
    width: 100%;
}
#sidebar {
    position: fixed;
    width: 12%;
    min-height: 100%;
    height: 100%;
    min-width: 130px;
    overflow: auto;
    background: #282828;
}
.content {
    height: 100%; 
    min-height: 100%; 
}
.bufferlines {
    font-family: monospace;
    overflow-y: auto;
    margin-left: 14%;
    width: auto;
    position: relative;
}

.navbar-fixed-bottom {
    margin: 0 5px 0 14%;
}
@media (max-width: 968px) {
    #sidebar, .bufferlines {
        position: relative;
        min-height: 0;
        margin-left: 0;
        max-width: 100%;
        border: 0;
    }
    #sidebar {
        width: 100%;
        text-align: center;
    }
    .navbar-fixed-bottom {
        margin: 0 5px 0 5px;
    }
}
.color-light-green {
    color: chartreuse;
}

.color-27 {
    color: deepskyblue;
}

.danger {
    background-color: rgb(217, 83, 79);
}

.color-28 {
    color: greenyellow;
}

.color-00 {
    color: coral;
}

.color-yellow {
    color: yellow;
}

.color-dark-red {
    color: darkred;
}

.color-dark-green {
    color: green;
}

.color-dark-blue {
    color: darkblue;
}

.color-dark-gray {
    color: gray;
}

.color-gray {
    color: lightgray;
}

.color-brown {
    color: brown;
}

.color-cyan {
    color: cyan;
}

.color-dark-cyan {
    color: darkcyan;
}

li.notification {
    color: green;
}

